<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RetrieveUsernamePassword">



    <ScrollView
        android:id="@+id/scrollViewRetrieve"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/ret_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/ret_Title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorPrimary"
                app:fontFamily="@font/aclonica"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ret_subTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/ret_subTitle"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:fontFamily="@font/aclonica"
                app:layout_constraintEnd_toEndOf="@+id/ret_Title"
                app:layout_constraintStart_toStartOf="@+id/ret_Title"
                app:layout_constraintTop_toBottomOf="@+id/ret_Title" />


            <EditText
                android:id="@+id/ret_recoverInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/ret_email_username"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="@+id/ret_subTitle"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="@+id/ret_subTitle"
                app:layout_constraintTop_toBottomOf="@+id/ret_subTitle"
                android:importantForAutofill="no" tools:targetApi="26"/>

            <Button
                android:id="@+id/ret_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                android:onClick="RetrieveUsernamePassword"
                android:text="@string/ret_recover_account_btn"
                app:layout_constraintEnd_toEndOf="@+id/ret_recoverInfo"
                app:layout_constraintStart_toStartOf="@+id/ret_recoverInfo"
                app:layout_constraintTop_toBottomOf="@+id/ret_recoverInfo" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>




</android.support.constraint.ConstraintLayout>